--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,54 @@
+/*html{
+	box-sizing: border-box;
+}
+*,*:before, *:after{
+	box-sizing: inherit;
+}
+*/
 body {
 	background-color: LightGray;
 }
 div{
 	border: 1px solid Chocolate;
+}
+
+/* Navigation Section */
+
+ul{
+	list-style-type:none;
+}
+.top-navigation {
+	background-color:white;
+}
+.top-navigation > .content {
+	width: 970px;
+	height: 70px;
+	margin:0 auto;
+}
+.links{
+	float:right;
+	font-family:'Roboto', sans-serif;
+	font-size:16px;
+	color:#838994;
+	letter-spacing: 0.03em;
+	-webkit-font-smoothing: antialiased;
+}
+.links > li{
+	display:inline-block;
+	margin-left:2rem;
+	margin-top:1rem;
+}
+
+.links > li > .active{
+	color: #4c5058;
+	font-weight: 500;
+}
+.logo{
+	padding: 0px 15px;
+	margin-top: 15px;
+}
+
+.links > li > a:hover{
+	cursor: pointer;
+	color: #4c5058;
 }
