--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,10 @@ body {
 	height: 70px;
 	margin:0 auto;
 }
-div{
+/*div{
 	border: 1px solid Chocolate;
 }
-
+*/
 /* Navigation Section */
 
 ul{
@@ -29,6 +29,9 @@ ul{
 }
 .top-navigation {
 	background-color:white;
+	position:fixed;
+	width: 100%;
+	z-index: 9999;
 }
 .top-navigation > div > .links{
 	float:right;
@@ -44,7 +47,7 @@ ul{
 	font-weight: 500;
 }
 .logo{
-	padding: 0px 15px;
+	padding: 0px 10px;
 	margin-top: 15px;
 }
 
@@ -53,7 +56,7 @@ ul{
 	color: #4c5058;
 }
 .introduction{
-	padding: 19rem 0;
+	padding: 17.5rem 0;
 	background-image: url('../Images/first-background-copy.jpg');
 	background-size: cover;
 	background-repeat:no-repeat;
@@ -66,7 +69,7 @@ ul{
 	font-weight:300;
 }
 .introduction > section > h3{
-	margin-top:1rem;
+	margin-top:0;
 	font-size:1.562rem;
 	font-weight:300;
 }
@@ -82,4 +85,20 @@ button{
 button:hover{
 	cursor:pointer;
 	background-color:#FF3E00;
+}
+.icons {
+	color:black;
+	padding:6rem 0;
+}
+.icons > h2{
+	font-size:2.5rem;
+	font-weight:300;
+}
+.icons > .icon-list > .devices{
+	display:inline-flex;
+	width: 33.3333333%;
+	align-content:space-between=0;
+	/* styles to assist in debugging*/
+	border: 1px solid black;
+	box-sizing: border-box;
 }
