--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 	box-sizing: inherit;
 }
 body {
-	background-color: LightGray;
+	/*background-color: LightGray;*/
 	text-align:center;
 	font-family:'Roboto', sans-serif;
 	font-size:16px;
@@ -21,8 +21,7 @@ body {
 /*div{
 	border: 1px solid Chocolate;
 }
-*/
-/* Navigation Section */
+/*Navigation Section */
 
 ul{
 	list-style-type:none;
@@ -55,8 +54,9 @@ ul{
 	cursor: pointer;
 	color: #4c5058;
 }
+/*Image section*/
 .introduction{
-	padding: 17.5rem 0;
+	padding: 19rem 0;
 	background-image: url('../Images/first-background-copy.jpg');
 	background-size: cover;
 	background-repeat:no-repeat;
@@ -86,6 +86,7 @@ button:hover{
 	cursor:pointer;
 	background-color:#FF3E00;
 }
+/*Icon Section*/
 .icons {
 	color:black;
 	padding:6rem 0;
@@ -98,7 +99,38 @@ button:hover{
 	display:inline-flex;
 	width: 33.3333333%;
 	align-content:space-between=0;
-	/* styles to assist in debugging*/
-	border: 1px solid black;
+	/* styles to assist in debugging
+	border: 1px solid black;*/
 	box-sizing: border-box;
+}
+/*Footer Section*/
+footer{
+	padding: 10rem 0;
+}
+footer > div{
+	margin-top:1rem;
+	border-top:1px solid Gray;
+}
+footer > div > h5{
+	color:black;
+	font-weight:300;
+	font-size:1rem;
+}
+footer > div > ul{
+	margin:0 auto;
+}
+footer > div > ul> li{
+	padding: .5rem;
+	display:inline-block;
+	border: 1px solid LightGray;
+	border-radius: 20px;
+}
+.fa-twitter{
+	color:#55acee;
+}
+.fa-facebook{
+	color:#4c66a4;
+}
+.fa-instagram{
+	color:#3f729b;
 }
