--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ body {
 	border: 1px solid Chocolate;
 }
 /*Navigation Section */
-
 ul{
 	list-style-type:none;
 }
@@ -41,18 +40,22 @@ ul{
 	margin-top:1rem;
 }
 
-.top-navigation > div > .links > li > .active{
-	color: #4c5058;
-	font-weight: 500;
-}
 .logo{
 	padding: 0px 10px;
 	margin-top: 15px;
+	float:left;
 }
-
 .top-navigation > div > .links > li > a:hover{
 	cursor: pointer;
-	color: #4c5058;
+	color: #333333;
+}
+a{
+	color:gray;
+	text-decoration:none;
+}
+a.active{
+	color: #4C5058;
+	font-weight: 500;
 }
 /*Image section*/
 .introduction{
@@ -95,17 +98,16 @@ button:hover{
 	font-size:2.5rem;
 	font-weight:300;
 }
-.icons > .icon-list > .devices{
-	display:inline-flex;
+.icons > .icon-list > li{
+	float: left;
 	width: 33.3333333%;
-	align-content:space-between=0;
 	/* styles to assist in debugging
 	border: 1px solid black;*/
 	box-sizing: border-box;
 }
 /*Footer Section*/
 footer{
-	padding: 10rem 0;
+	clear: both;
 }
 footer > div{
 	margin-top:1rem;
@@ -118,6 +120,7 @@ footer > div > h5{
 }
 footer > div > ul{
 	margin:0 auto;
+	padding-left:0;
 }
 footer > div > ul> li{
 	padding: .5rem;
@@ -134,3 +137,17 @@ footer > div > ul> li{
 .fa-instagram{
 	color:#3f729b;
 }
+
+.clearfix:after {
+   visibility: hidden;
+   display: block;
+   font-size: 0;
+   content: " ";
+   clear: both;
+   height: 0;
+ }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
